# blog_post_generator

blog_post_generator/: README.md  pyproject.toml
blog_post_generator/src/blog_post_generator/: blog_outline_generator.py  blog_writer.py  crew.py  main.py
blog_post_generator/src/blog_post_generator/agents/: reporting_analyst_agent.py  researcher_agent.py
blog_post_generator/src/blog_post_generator/tasks/: reporting_task.py  research_task.py
