[project]
name = "blog_post_generator"
version = "0.1.0"
description = "blog_post_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "openai (>=1.76.2,<2.0.0)"
]

[project.scripts]
blog_post_generator = "blog_post_generator.main:run"
run_crew = "blog_post_generator.main:run"
train = "blog_post_generator.main:train"
replay = "blog_post_generator.main:replay"
test = "blog_post_generator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
