[tool.poetry]
name = "blog_post_generator"
version = "0.1.0"
description = "blog_post_generator using crewAI"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "blog_post_generator", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = "^0.118.0"
openai = "^1.77.0"

[tool.poetry.scripts]
blog_post_generator = "blog_post_generator.main:run"
run_crew = "blog_post_generator.main:run"
train = "blog_post_generator.main:train"
replay = "blog_post_generator.main:replay"
test = "blog_post_generator.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
